<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coffee</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="make_single">Single</string>
    <string name="make_double">Double</string>
    <string name="img_desc_launcher">Logo</string>
    <string name="pref_machine_lib_title">Machine</string>
    <string name="pref_machine_lib_summ">Coffee machine to use</string>
    <string name="pref_machine_lib_default">default</string>
    <string name="pref_wifi_only_title">Wifi only mode</string>
    <string name="pref_wifi_only_summ">Send commands only when wifi is connected</string>
    <string name="pref_machine_ip_title">Machine IP</string>
    <string name="pref_machine_ip_summ">Your device\'s IP</string>
    <string name="pref_machine_ip_default">0.0.0.0</string>
    <string name="pref_machine_port_title">Machine port</string>
    <string name="pref_machine_port_summ">Your machine\'s port</string>
    <string name="pref_machine_port_default">2324</string>
    <string name="milk">Milk</string>
    <string name="sugar">Sugar</string>
    <string name="milk_toast">New Milk Value: </string>
    <string name="sugar_toast">New Sugar Value: </string>
    <string name="output">Command:</string>
    <string name="save1">1</string>
    <string name="save2">2</string>
    <string name="save3">3</string>
    <string name="save4">4</string>

</resources>
